Fix cursor not showing up on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -404,11 +404,6 @@ footer {
 @media (max-width: 768px) {
   body {
     overflow-y: auto;
-    cursor: default;
-  }
-
-  #cursor {
-    display: none;
   }
 
   footer {
